--- a/notes/OpenFOAM-Primer.tex
+++ b/notes/OpenFOAM-Primer.tex
@@ -3,6 +3,9 @@
 \usepackage{tikz}
 
 \begin{document}
-    \section{Planar Poiseuille flows}
-    
+    \section{Elementary viscous flows}
+    \subsection{Unidirectional flows}
+    Pure diffusion
+    \subsection{Spatial developing flows}
+    Entrance length
 \end{document}
